Background image on homepage no longer covering header

--- a/includes/main.css
+++ b/includes/main.css
@@ -11,6 +11,7 @@ body{
     opacity: 0.15;
     width: 100vw; 
     height: 100vh; 
+    z-index: -100;
 }
 
 #crew h1{
